crates/ktsense-cli/tests/snapshots/partial_outline__md__declaration_then_callable_reference.snap
---
source: crates/ktsense-cli/tests/partial_outline.rs
expression: record
---
exit: 0
stderr: (empty)
--- stdout ---
## declaration-then-callable-reference.gap.kt

```kotlin
// partial: recovered around a parse error; some declarations may be missing
fun call()
```
