crates/ktsense-cli/tests/snapshots/partial_outline__md__nullable_callable_reference.snap
---
source: crates/ktsense-cli/tests/partial_outline.rs
expression: record
---
exit: 0
stderr: (empty)
--- stdout ---
## nullable-callable-reference.gap.kt

```kotlin
// partial: recovered around a parse error; some declarations may be missing and shown signatures may be incomplete or malformed
val reference /* inferred */
```
