crates/ktsense-cli/tests/snapshots/partial_outline__md__semicolon_opening_class_body.snap
---
source: crates/ktsense-cli/tests/partial_outline.rs
expression: record
---
exit: 0
stderr: (empty)
--- stdout ---
## semicolon-opening-class-body.gap.kt

```kotlin
// partial: recovered around a parse error; some declarations may be missing and shown signatures may be incomplete or malformed
class Holder { fun member() }
```
